# oreon-defense-cpp

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp  virus-detection.cpp  virus-detection.h
.github/: CODEOWNERS
MainUi/: oreon-defense.qmltypes  oreon-defense_qml_module_dir_map.qrc  qmldir
MainUi/Common/: CMakeLists.txt  QButton.qml  QCombo.qml  QFilePicker.qml  QInput.qml  QSlider.qml  QSwitch.qml  QText.qml  common_qml_module_dir_map.qrc  commonplugin_MainUi_CommonPlugin.cpp  commonplugin_MainUi_CommonPlugin_in.cpp  qmldir
MainUi/MainUi/: Main.qml  SettingsPage.qml
MainUi/MainUi/pages/: antivirus.qml  firewall.qml
MainUi/pages/: antivirus.qml
meta_types/: oreon-defense_json_file_list.txt  oreon-defense_json_file_list.txt.timestamp  qt6oreon-defense_metatypes.json.gen
ui/: Main.qml
